--- a/views/main.pug
+++ b/views/main.pug
@@ -12,22 +12,22 @@ block content
                         th 허용 인원
                         th 방장
                 tbody
-                    //for room in rooms
+                    for room in rooms
                         tr(data-id= room._id)
                             td=room.title
-                            td= room.password ? '비밀방' : '공개방'
+                            td=room.password ? '비밀방' : '공개방'
                             td=room.max
                             td(style='color:' + room.owner)=room.owner
                             -var password = room.password ? 'true' : 'false';
-                            td:button(data-password=password data-id=room._id).join-btn 입장
+                            td: button(data-password=password data-id=room._id).join-btn 입장
             .error-message=error
-            a(href='/room') 채팅방 생성
-        script(src='./socket.io/socket.io.js')
-        script.
-            const socket = io.connect('http://localhost:8001/room', {
+        a(href='/room') 채팅방 생성
+            script(src='/socket.io/socket.io.js')
+            script.
+                var socket = io.connect('http://localhost:8001/room', {
                 path: '/socket.io'
-            });
-            socket.on('newRoom', function (data) {
+                });
+                socket.on('newRoom', function (data) {
                 const tr = document.createElement('tr');
                 let td = document.createElement('td');
                 td.textContent = data.title;
@@ -49,27 +49,27 @@ block content
                 tr.appendChild(td);
                 tr.dataset.id= data._id;
                 document.querySelector('table tbody').appendChild(tr);
-            });
-            socket.on('removeRoom', function(data){
-            Array.prototype.forEach.call(document.querySelectorAll('tbody tr'), function(tr)
-            {
-                if(tr.dataset.id === data){
-                tr.parentNode.removeChild(tr);
-                }
                 });
-            });
-            function addBtnEvent(e) {
-                if(e.target.dataset.password === 'true'){
-                    const password = prompt('비밀번호를 입력하세요');
-                    location.href ='/room/'+ e.target.dataset.id + '?password='+password;
-                }else{
-                    location.href='/room/'+e.target.dataset.id;
+                socket.on('removeRoom', function(data){
+                Array.prototype.forEach.call(document.querySelectorAll('tbody tr'), function(tr)
+                {
+                    if(tr.dataset.id === data){
+                    tr.parentNode.removeChild(tr);
+                    }
+                    });
+                });
+                function addBtnEvent(e) {
+                    if(e.target.dataset.password === 'true'){
+                        const password = prompt('비밀번호를 입력하세요');
+                        location.href ='/room/'+ e.target.dataset.id + '?password='+password;
+                    }else{
+                        location.href='/room/'+e.target.dataset.id;
+                    }
                 }
-            }
-            Array.prototype.forEach.call(document.querySelectorAll('.join-btn'), function(btn)
-            {
-                btn.addEventListener('click', addBtnEvent);
-            });
+                Array.prototype.forEach.call(document.querySelectorAll('.join-btn'), function(btn)
+                {
+                    btn.addEventListener('click', addBtnEvent);
+                });
     .timeline
         if user
             div
